# first_task

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/source/: Client.cpp
Server/: CMakeLists.txt
Server/source/: Server.cpp
Students/: CMakeLists.txt
Students/include/Students/: Students.hpp
Students/source/: Students.cpp
StudentsProcessor/: CMakeLists.txt
StudentsProcessor/include/StudentsProcessor/: StudentsProcessor.hpp
StudentsProcessor/source/: StudentsProcessor.cpp
